--- a/lab11/package.json
+++ b/lab11/package.json
@@ -24,6 +24,7 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodex": "^0.3.5"
   }
 }
